<resources>
    <string name="app_name">TempChat</string>

    <string name="message">Type Something</string>
    <string name="send">Send</string>
    <string name="disconnect">Disconnect</string>
    <string name="userName">User Name</string>
    <string name="encryptionKey">Encryption Key </string>
    <string name="connect">Connect</string>
    <string name="codeChat">Chat Room Code</string>
    <string name="titleApp">TEMP-CHAT</string>
    <string name="sendMessage">New Message</string>
    <string name="empty_message_alert">Empty messages not allowed</string>

    <string name="emptyField">Empty Field</string>
    <string name="emptyChatCodeAlert">Chat code cannot be empty</string>
    <string name="emptyUserNameAlert">Username cannot be empty</string>
    <string name="emptyEncryptionKeyAlert">Encryption key cannot be empty</string>

    <string name="failedToConnectTitle">Failed to connect</string>
    <string name="failedToConnectMessage">Failed to connect with server</string>

    <string name="delete_message_title">Delete Message</string>
    <string name="delete_message_body">Do you really want to delete?</string>
    <string name="delete_for_everyone">DELETE FOR EVERYONE</string>
    <string name="delete_for_me">DELETE FOR ME</string>
    <string name="delete_message_negative_answer">CANCEL</string>
    <string name="message_deleted">Message Deleted</string>
    <string name="no_messages_to_delete">There are no messages to delete</string>

    <string name="user_preferences">User Preferences</string>
    <string name="server_address">Server Address</string>
    <string name="show_status">Show status</string>
    <string name="server_address_info">Info: Use a custom server, or leave blank to use our servers</string>
    <string name="delete_messages_on_disconnect">Delete messages on disconnect</string>
    <string name="save_connection_string">Save connection string</string>
    <string name="save_chats">Save chats on disconnect</string>
    <string name="mute">Mute Notifications</string>
    <string name="save_preferences">Save</string>
    <string name="back">Back</string>
    <string name="saved_preferences">Preferences Saved</string>

    <string name="online_user">is now online</string>
    <string name="offline_user">left</string>
</resources>