<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="-10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:text="@string/user_preferences"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="-5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="70.7dp"
            android:layout_height="70.7dp"
            android:layout_gravity="center"
            android:src="@drawable/message" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
    <EditText
        android:id="@+id/server_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/server_address"
        android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_address_info"
        android:textStyle="italic"></TextView>


    <CheckBox
        android:id="@+id/show_status"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#555"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_status" />

    <CheckBox
        android:id="@+id/delete_on_disconnect"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#555"
        android:checked="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_messages_on_disconnect" />

    <CheckBox
        android:id="@+id/save_connection_string"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#555"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_connection_string" />

    <CheckBox
        android:id="@+id/save_chats"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#555"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_chats" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#8E24AA"
            android:textColor="#FFF"
            android:text="@string/save_preferences" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#444444"
            android:textColor="#FFF"
            android:layout_weight="1"
            android:onClick="back"
            android:text="@string/back" />
    </LinearLayout>
</LinearLayout>