<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="95.7dp"
        android:layout_height="86.7dp"
        android:layout_gravity="left"
        android:layout_marginTop="21.7dp"
        android:src="@drawable/message"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/titleApp"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:background="#ECE9EF"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/newMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="#00C32424"
                android:gravity="center"
                android:text="@string/sendMessage"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/message"
        android:ems="10"
        android:inputType="textPersonName"
        />


    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/send"
        android:onClick="Send"
        app:backgroundTint="#AC8ADC" />

</LinearLayout>